# 13_brigade_coupes_rases

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: frontend-ci.yml  pre-commit.yaml  react.js.yml
analytics/: README.md
analytics/data/: .gitignore
analytics/notebooks/: prepare_ign_slope_raster.ipynb
backend/: README.md
backend/app/: config.py  database.py  deps.py  main.py  models.py  schemas.py
backend/app/routes/: items.py
backend/app/services/: items.py
backend/test/: conftest.py  test_items_service.py
docker/: README.md
docker/backend/: Dockerfile
docker/postgres/: Dockerfile
frontend/: .env.development  .gitignore  README.md  biome.json  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/.vitest-preview/: index.html
frontend/poc_app/: index.html  package.json  pnpm-lock.yaml
frontend/poc_app/src/: App.tsx
frontend/public/: mockServiceWorker.js
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
frontend/src/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  toast.tsx
frontend/src/core/: store.ts
frontend/src/core/components/: AppLayout.tsx  Navbar.tsx
frontend/src/core/store/: selector.ts  store.ts
frontend/src/hooks/: use-toast.ts
frontend/src/mocks/: clear-cuttings.ts  handlers.ts  users.ts
frontend/src/routes/: __root.tsx  _auth.clear-cuttings.list.lazy.tsx  _auth.clear-cuttings.map.lazy.tsx  _auth.index.lazy.tsx  _auth.tsx  _clear-cuttings.list.lazy.tsx  _clear-cuttings.map.lazy.tsx  _clear-cuttings.tsx  clear-cuttings.list.lazy.tsx  clear-cuttings.map.lazy.tsx  index.lazy.tsx  login.tsx  map.lazy.tsx
frontend/src/routes/map/: clear-cuttings.$clearCuttingId.lazy.tsx  index.lazy.tsx  list.lazy.tsx  report.$reportId.lazy.tsx
frontend/src/shared/: api.ts  array.ts  items.ts  router.ts
frontend/src/shared/api/: api.ts  types.ts
frontend/src/shared/components/: AppLayout.tsx  ButtonGroup.tsx  InputGroup.tsx  Navbar.tsx  SidebarMenu.tsx
frontend/src/shared/hooks/: geolocation.ts  store.ts
frontend/src/shared/store/: selector.ts  store.ts
frontend/src/test/: renderApp.tsx  setup.ts
keepass/: secrets.kdbx
(+29 files in other folders)
